# stubot

./: Cargo.toml  LICENSE  README.md  index.html
assets/: Worker.110dda38.js  Worker.6a50cdf0.js  index.5760b529.css  index.6286183c.js  index.df26347d.js  stubot_wasm_bg.0f1804cc.wasm  stubot_wasm_bg.f122d092.wasm  vendor.889ffd78.js
src/: cmds.rs  main.rs  perftree.rs  test.rs  uci.rs
src/chess/: board.rs  consts.rs  mod.rs  move_t.rs  rules.rs  structs.rs
src/types/: state.rs
stubot-chess/: Cargo.toml
stubot-chess/src/: board.rs  eval.rs  lib.rs  perft.rs  rules.rs  structs.rs  testpos.rs
stubot-engine/: Cargo.toml
stubot-engine/src/: lib.rs  search.rs  searcher.rs  signal.rs  structs.rs  traits.rs
stubot-mcu/: Cargo.toml  README.md
stubot-mcu/.cargo/: config.toml
stubot-mcu/src/: main.rs
stubot-perftree/: Cargo.toml
stubot-perftree/src/: main.rs
stubot-uci/: Cargo.toml
stubot-uci/src/: main.rs  uci.rs
stubot-wasm/: Cargo.toml  README.md
stubot-wasm/src/: lib.rs
vite/: .eslintrc.js  README.md  index.html  package-lock.json  package.json  vite.config.ts
vite/src/: index.css  main.tsx  site.webmanifest
vite/src/ts/: App.tsx  Board.css  Board.tsx  Game.tsx  Intro.css  Intro.tsx  Piece.tsx  Square.tsx  Worker.ts  app.tsx  types.ts  util.ts  wasm.ts
