[package]
name = "stubot-chess"
version = "0.1.0"
authors = ["Stuart Geipel <lapimlu@gmail.com>"]
edition = "2018"

[lib]
name = "chess"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.derive_more]
version = "0.99.0"
default-features = false
features = ["add", "add_assign", "into", "from", "not", "mul"]

[dependencies]
num-traits = "0.2"
num-derive = "0.3"

[dev-dependencies]
pretty_assertions = "0.6.1"
