[package]
name = "stubot-chess"
version = "0.1.0"
authors = ["Stuart Geipel <lapimlu@gmail.com>"]
edition = "2018"

[lib]
name = "chess"
path = "src/lib.rs"
doctest = false


[features]
test = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.derive_more]
version = "0.99.0"
default-features = false
features = ["add", "add_assign", "into", "from", "not", "mul"]

[dev-dependencies]
pretty_assertions = "0.6.1"
