[package]
name = "stubot-engine"
version = "0.1.0"
authors = ["Stuart Geipel <lapimlu@gmail.com>"]
edition = "2018"

[lib]
name = "engine"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stubot-chess = { path = "../stubot-chess" }