[package]
name = "stubot-mcu"
version = "0.1.0"
authors = ["Stuart Geipel <lapimlu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["log-itm"]
log-itm = []

[dependencies]
stubot-chess = { path = "../stubot-chess" }
stubot-engine = { path = "../stubot-engine", default-features = false }
stm32g4xx-hal = { version = "0.0.0", git = "https://github.com/stm32-rs/stm32g4xx-hal.git", features=["stm32g431"] }
# stm32g4xx-hal ->stm32g4 -> cortex-m-rt is a different version and idk how to
# dedupe besides this. see `cargo tree`
cortex-m-rt = "0.6.14"
alloc-cortex-m = "0.4.1"
