[package]
name = "stubot-uci"
version = "0.1.0"
authors = ["Stuart Geipel <lapimlu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stubot-chess = { path = "../stubot-chess" }
tokio = { version = "0.2", features = ["full", "io-util"] }
tokio-util = { version = "0.3.1", features = ["full"] }
futures = "0.3"
